<resources>
    <string name="app_name">shoven-HabitTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main_title">TO DO</string>

    <!-- new_habit.xml -->
    <string name="new_title">NEW</string>
    <string name="save_button">SAVE</string>
    <string name="name_hint">Name</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">R</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="pick_date">Pick a Date</string>
    <string name="comment_hint">Comment</string>

    <!-- history.xml -->
    <string name="history_title">HISTORY</string>

    <!-- habit_homepage.xml -->
    <string name="test_habit_name_title">Habit Name</string>
    <string name="complete_habit">Complete Habit</string>
    <string name="habit_count">Times today</string>

    <!-- all_habits.xml -->
    <string name="all_habits_title">ALL HABITS</string>

    <!-- edit_habit.xml -->
    <string name="edit_title">EDIT</string>
    <string name="edit_habit_menu">Edit Habit</string>
    <string name="delete_habit_menu">Delete Habit</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_all_habits">All Habits</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="start_date">Start Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_if_clear">This action cannot be undone.\n\nAre you sure you want to clear all data?</string>
    <string name="clear_all_data">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_habit_homepage">HabitHomepage</string>
    <string name="complete_habit_button_content_description">Complete Habit Button</string>
    <string name="streak_count">Streak</string>
    <string name="check_if_delete_habit">Delete habit?</string>
    <string name="check_if_delete_record">Delete record?</string>
    <string name="delete">Delete</string>
    <string name="title_activity_new_habit2">NewHabitActivity2</string>
</resources>
