<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_title"
        android:id="@+id/newTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:layout_alignBaseline="@+id/newTextView"
        android:layout_alignBottom="@+id/newTextView"
        android:layout_alignParentEnd="true"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:textColor="?attr/colorControlNormal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@+id/newTextView"
        android:layout_alignParentStart="true"
        android:id="@+id/newTopSeparatorView"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitNameEditText"
        android:layout_below="@+id/newTopSeparatorView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/name_hint"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/habitNameEditText"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:id="@+id/sunday_button"
                android:layout_weight="0.5"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:id="@+id/monday_button"
                android:layout_weight="0.5"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:id="@+id/tuesday_button"
                android:layout_weight="0.5"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:id="@+id/wednesday_button"
                android:layout_weight="0.5"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:id="@+id/thursday_button"
                android:layout_weight="0.5"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:id="@+id/friday_button"
                android:layout_weight="0.5"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:id="@+id/saturday_button"
                android:layout_weight="0.5"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:id="@+id/pickDateButton"
        android:layout_below="@id/linearLayout"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/dateTextView"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/pickDateButton"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/commentEditText"
        android:hint="@string/comment_hint"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>