<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".HabitHomepageActivity">

    <item android:id="@+id/editHabitMenu"
        android:title="@string/edit_habit_menu"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:onClick="editHabit" />

    <item android:id="@+id/deleteHabitMenu"
        android:title="@string/delete_habit_menu"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:onClick="deleteHabit" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
