<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_edit_habit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ca.ualberta.cs.shoven_habittracker.EditHabitActivity">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editHabitNameEditText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/name_hint"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/editHabitNameEditText"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editSundayToggleButton"
                    android:layout_weight="0.5"
                    android:textOff="@string/sunday"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:textOn="@string/sunday" />

                <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editMondayToggleButton"
                    android:layout_weight="0.5"
                    android:textOff="@string/monday"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:textOn="@string/monday" />

                <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTuesdayToggleButton"
                    android:layout_weight="0.5"
                    android:textOff="@string/tuesday"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:textOn="@string/tuesday" />

                <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editWednesdayToggleButton"
                    android:layout_weight="0.5"
                    android:textOff="@string/wednesday"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:textOn="@string/wednesday" />

                <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editThursdayToggleButton"
                    android:layout_weight="0.5"
                    android:textOff="@string/thursday"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:textOn="@string/thursday" />

                <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editFridayToggleButton"
                    android:layout_weight="0.5"
                    android:textOff="@string/friday"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:textOn="@string/friday" />

                <ToggleButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/editSaturdayToggleButton"
                    android:layout_weight="0.5"
                    android:textOff="@string/saturday"
                    style="@android:style/Widget.Holo.Light.Button.Toggle"
                    android:textOn="@string/saturday" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:id="@+id/editCommentEditText"
            android:hint="@string/comment_hint"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/saveEditFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_save"
            app:backgroundTint="@color/colorAccent"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
