<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_habit_homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.shoven_habittracker.HabitHomepageActivity">

    <ImageButton
        android:layout_width="100dp"
        android:id="@+id/completeHabitButton"
        android:background="@drawable/ic_check_circle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/complete_habit_button_content_description"
        android:layout_height="100dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:id="@+id/habitHomepageSeparatorView"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/streakTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:id="@+id/habitHomepageMiddleSeparatorView"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/habitHomepageCommentTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitHistoryExpandableListView"
        android:layout_below="@+id/habitHomepageMiddleSeparatorView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/habit_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dailyGoalTextView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/completeHabitButton"
        android:layout_toStartOf="@+id/completeHabitButton" />

    <TextView
        android:text="@string/streak_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/streakTextView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBaseline="@+id/dailyGoalTextView"
        android:layout_alignBottom="@+id/dailyGoalTextView"
        android:layout_toEndOf="@+id/completeHabitButton" />

    <TextView
        android:text="0"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/streakCount"
        android:background="@drawable/ic_circle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:layout_above="@+id/streakTextView"
        android:layout_alignEnd="@+id/streakTextView"
        android:textColor="#FFFFFF"/>

    <TextView
        android:text="0"
        android:layout_height="50dp"
        android:id="@+id/dailyGoalCount"
        android:background="@drawable/ic_circle"
        android:layout_marginEnd="19dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:layout_width="50dp"
        android:layout_above="@+id/streakTextView"
        android:layout_toStartOf="@+id/completeHabitButton"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitHomepageCommentTextView"
        android:text=""
        android:layout_below="@+id/habitHomepageSeparatorView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>